[metadata]
name = plover_retro_text_transform
version = 0.1.1
description = Perform various text transforms, such as titlecase, retroactively.
author = Erik Crevel
author_email = erik.crevel@ntlworld.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nimble0/plover_retro_text_transform
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages = find:

[options.entry_points]
plover.meta =
    retro_capitalise = plover_retro_text_transform:retro_capitalise
    retro_capitalize = plover_retro_text_transform:retro_capitalise
    retro_title = plover_retro_text_transform:retro_title
    retro_upper = plover_retro_text_transform:retro_upper
    retro_lower = plover_retro_text_transform:retro_lower
    retro_replace_space = plover_retro_text_transform:retro_replace_space
